@@ -305,6 +305,7 @@ Miscellaneous
 - the solchecker tool is extended for rational values
 - updated ampl/mp to v4.0.0
 - removed 4th number in SCIP version; new format is major.minor.patch
+- classify as varbound only with a binary variable in SCIPclassifyConstraintTypesLinear()
 
 Known bugs
 ----------
